--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/vbmachado123/video-maker/issues"
   },
-  "homepage": "https://github.com/vbmachado123/video-maker#readme"
+  "homepage": "https://github.com/vbmachado123/video-maker#readme",
+  "dependencies": {
+    "binary-extensions": "^2.0.0"
+  },
+  "devDependencies": {}
 }
