Inserindo o Watson, passando as sentencas e recuperando as keywords delas

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "algorithmia": "^0.3.10",
     "binary-extensions": "^2.0.0",
+    "express": "^4.17.1",
+    "ibm-watson": "^5.5.0",
+    "parse-domain": "^3.0.1",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.18"
   },
