--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "algorithmia": "^0.3.10",
     "binary-extensions": "^2.0.0",
     "express": "^4.17.1",
+    "googleapis": "^49.0.0",
     "ibm-watson": "^5.5.0",
     "parse-domain": "^3.0.1",
     "readline-sync": "^1.4.10",
