--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
   },
   "homepage": "https://github.com/vbmachado123/video-maker#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "@ffprobe-installer/ffprobe": "^1.0.12",
     "algorithmia": "^0.3.10",
     "binary-extensions": "^2.0.0",
     "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
+    "gm": "^1.23.1",
     "googleapis": "^49.0.0",
     "ibm-watson": "^5.5.0",
     "image-downloader": "^3.5.0",
+    "imagemagick": "^0.1.3",
+    "jimp": "^0.10.3",
     "parse-domain": "^3.0.1",
+    "readline": "^1.3.0",
     "readline-sync": "^1.4.10",
-    "sbd": "^1.0.18"
+    "sbd": "^1.0.18",
+    "videoshow": "^0.1.12"
   },
   "devDependencies": {}
 }
