--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "image-downloader": "^3.5.0",
     "imagemagick": "^0.1.3",
     "jimp": "^0.10.3",
+    "open": "^7.0.3",
     "parse-domain": "^3.0.1",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.10",
